--- a/Ketch/Base.lproj/Signup.storyboard
+++ b/Ketch/Base.lproj/Signup.storyboard
@@ -344,12 +344,15 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sprite-cloud-4" translatesAutoresizingMaskIntoConstraints="NO" id="u4P-vD-Hk1">
                                 <rect key="frame" x="254" y="121" width="95" height="44"/>
                             </imageView>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g77-dS-QgN" customClass="WaveView" customModule="Ketch" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g77-dS-QgN" customClass="WaveView" customModule="Ketch" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="303" width="600" height="580"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ketch-large" translatesAutoresizingMaskIntoConstraints="NO" id="AII-hw-URZ">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ketch-large" translatesAutoresizingMaskIntoConstraints="NO" id="AII-hw-URZ" customClass="KetchBoatView" customModule="Ketch" customModuleProvider="target">
                                 <rect key="frame" x="262" y="231" width="77" height="80"/>
+                                <connections>
+                                    <outlet property="waveView" destination="g77-dS-QgN" id="wGR-UK-djk"/>
+                                </connections>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WELCOME ABOARD!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ALd-iX-x5H" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
                                 <rect key="frame" x="176" y="341" width="249" height="25"/>
@@ -450,7 +453,6 @@ Get a date, have fun, and find the One!</string>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
                     <connections>
-                        <outlet property="boatView" destination="AII-hw-URZ" id="oN1-G9-4cL"/>
                         <outletCollection property="cloudViews" destination="eGq-tG-l7G" collectionClass="NSMutableArray" id="bm9-eO-Chh"/>
                         <outletCollection property="cloudViews" destination="HqM-6X-6fn" collectionClass="NSMutableArray" id="MG7-1G-Ctn"/>
                         <outletCollection property="cloudViews" destination="5Qk-40-QRo" collectionClass="NSMutableArray" id="jRk-0a-1EA"/>
@@ -504,12 +506,15 @@ Get a date, have fun, and find the One!</string>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sprite-cloud-4" translatesAutoresizingMaskIntoConstraints="NO" id="h6K-Ei-eDJ">
                                 <rect key="frame" x="254" y="121" width="95" height="44"/>
                             </imageView>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4i8-hs-vhM" customClass="WaveView" customModule="Ketch" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4i8-hs-vhM" customClass="WaveView" customModule="Ketch" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="303" width="600" height="580"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ketch-large" translatesAutoresizingMaskIntoConstraints="NO" id="tu0-Pb-yyF">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ketch-large" translatesAutoresizingMaskIntoConstraints="NO" id="tu0-Pb-yyF" customClass="KetchBoatView" customModule="Ketch" customModuleProvider="target">
                                 <rect key="frame" x="262" y="231" width="77" height="80"/>
+                                <connections>
+                                    <outlet property="waveView" destination="4i8-hs-vhM" id="Ntk-9l-URc"/>
+                                </connections>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ALL ABOARD!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uXe-bZ-bUx" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
                                 <rect key="frame" x="216" y="341" width="168" height="25"/>
@@ -612,7 +617,6 @@ Hold tight and you'll be finding the one before you know it.</string>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
                     <connections>
-                        <outlet property="boatView" destination="tu0-Pb-yyF" id="6EZ-qv-xfg"/>
                         <outletCollection property="cloudViews" destination="bMT-dx-z8S" collectionClass="NSMutableArray" id="nw1-Tz-QFZ"/>
                         <outletCollection property="cloudViews" destination="9sh-MZ-ePT" collectionClass="NSMutableArray" id="K4U-Vu-95O"/>
                         <outletCollection property="cloudViews" destination="QmH-Rr-jg6" collectionClass="NSMutableArray" id="6D2-1V-SKt"/>
