--- a/Ketch/Base.lproj/Main.storyboard
+++ b/Ketch/Base.lproj/Main.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="THI-zj-J05">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="THI-zj-J05">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -17,6 +18,7 @@
             <string>TransatTextBlack</string>
             <string>TransatTextBlack</string>
             <string>TransatTextBlack</string>
+            <string>TransatTextBlack</string>
         </mutableArray>
         <mutableArray key="TransatTextBold.otf">
             <string>TransatTextBold</string>
@@ -26,6 +28,7 @@
             <string>TransatTextMedium</string>
         </mutableArray>
         <mutableArray key="TransatTextStandard.otf">
+            <string>TransatTextStandard</string>
             <string>TransatTextStandard</string>
             <string>TransatTextStandard</string>
             <string>TransatTextStandard</string>
@@ -1175,13 +1178,152 @@ SAILED FOR TODAY.</string>
             </objects>
             <point key="canvasLocation" x="-187" y="2863"/>
         </scene>
+        <!--Error View Controller-->
+        <scene sceneID="FDF-cW-E7j">
+            <objects>
+                <viewController storyboardIdentifier="Welcome" id="dtd-Ah-BIE" customClass="ErrorViewController" customModule="Ketch" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="A5N-Nb-vIE"/>
+                        <viewControllerLayoutGuide type="bottom" id="OTF-gM-chU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="JmK-Bu-8r1">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bhP-AS-XzQ" customClass="WaveView" customModule="Ketch" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="576" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sprite-sun" translatesAutoresizingMaskIntoConstraints="NO" id="wHR-Yg-gdU">
+                                <rect key="frame" x="262" y="0.0" width="218" height="186"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sprite-cloud-1" translatesAutoresizingMaskIntoConstraints="NO" id="WoJ-OM-zoN">
+                                <rect key="frame" x="372" y="38" width="80" height="34"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sprite-cloud-2" translatesAutoresizingMaskIntoConstraints="NO" id="SIS-1G-bg1">
+                                <rect key="frame" x="40" y="87" width="95" height="43"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sprite-cloud-3" translatesAutoresizingMaskIntoConstraints="NO" id="FMz-1j-LBK">
+                                <rect key="frame" x="293" y="64" width="66" height="34"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sprite-cloud-4" translatesAutoresizingMaskIntoConstraints="NO" id="cAd-NY-cwO">
+                                <rect key="frame" x="254" y="121" width="95" height="44"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="300" translatesAutoresizingMaskIntoConstraints="NO" id="Ydu-ga-8Jd" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
+                                <rect key="frame" x="159" y="299" width="283.5" height="78"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Seems like we’re having some trouble, please give us another chance.">
+                                        <attributes>
+                                            <color key="NSColor" red="0.050980392156862744" green="0.39215686274509803" blue="0.53725490196078429" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <font key="NSFont" size="21" name="TransatTextStandard"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" paragraphSpacing="8" minimumLineHeight="26"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="fontSize">
+                                        <real key="value" value="21"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7fq-1r-Vct" customClass="DesignableButton" customModule="Ketch" customModuleProvider="target">
+                                <rect key="frame" x="175" y="405" width="250" height="55"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="4CW-hs-BM2"/>
+                                    <constraint firstAttribute="width" constant="250" id="pZZ-DF-9nr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="TransatTextBlack" family="Transat Text" pointSize="20"/>
+                                <inset key="titleEdgeInsets" minX="0.0" minY="5" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="Go Back">
+                                    <color key="titleColor" red="0.050980392159999999" green="0.3921568627" blue="0.53725490200000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="28"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" red="0.050980392159999999" green="0.3921568627" blue="0.53725490200000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sorry :(" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="300" translatesAutoresizingMaskIntoConstraints="NO" id="4y1-wu-k3f" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
+                                <rect key="frame" x="257" y="499" width="67.5" height="21"/>
+                                <fontDescription key="fontDescription" name="TransatTextStandard" family="Transat Text" pointSize="21"/>
+                                <color key="textColor" red="0.14509803921568629" green="0.6470588235294118" blue="0.6470588235294118" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="fontSize">
+                                        <real key="value" value="21"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="crab-sorry-arrow" translatesAutoresizingMaskIntoConstraints="NO" id="czY-j4-WIE">
+                                <rect key="frame" x="286" y="524" width="10" height="24"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="crab" translatesAutoresizingMaskIntoConstraints="NO" id="ay3-lN-TSe">
+                                <rect key="frame" x="252" y="540" width="96" height="60"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.94003820419999995" green="0.98082369570000005" blue="0.96848088499999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ay3-lN-TSe" firstAttribute="top" secondItem="7fq-1r-Vct" secondAttribute="bottom" priority="699" constant="80" id="05Z-a9-Y2R"/>
+                            <constraint firstItem="wHR-Yg-gdU" firstAttribute="bottom" secondItem="cAd-NY-cwO" secondAttribute="bottom" constant="21" id="2JX-if-lZH"/>
+                            <constraint firstItem="WoJ-OM-zoN" firstAttribute="leading" secondItem="wHR-Yg-gdU" secondAttribute="leading" constant="110" id="5n9-ki-mEf"/>
+                            <constraint firstItem="7fq-1r-Vct" firstAttribute="top" secondItem="Ydu-ga-8Jd" secondAttribute="bottom" constant="28" id="8El-zG-oeU"/>
+                            <constraint firstAttribute="centerX" secondItem="ay3-lN-TSe" secondAttribute="centerX" id="9hV-Bc-PDb"/>
+                            <constraint firstItem="wHR-Yg-gdU" firstAttribute="top" secondItem="A5N-Nb-vIE" secondAttribute="bottom" priority="749" id="Bhm-Tl-emz"/>
+                            <constraint firstAttribute="trailing" secondItem="bhP-AS-XzQ" secondAttribute="trailing" id="Fwr-lT-NIk"/>
+                            <constraint firstItem="czY-j4-WIE" firstAttribute="top" secondItem="4y1-wu-k3f" secondAttribute="bottom" constant="4" id="GaG-76-dL0"/>
+                            <constraint firstItem="4y1-wu-k3f" firstAttribute="centerX" secondItem="czY-j4-WIE" secondAttribute="centerX" id="HQ7-Iy-tdc"/>
+                            <constraint firstItem="WoJ-OM-zoN" firstAttribute="top" secondItem="wHR-Yg-gdU" secondAttribute="top" constant="38" id="ITN-QT-BWw"/>
+                            <constraint firstAttribute="centerX" secondItem="Ydu-ga-8Jd" secondAttribute="centerX" id="Q3X-Jb-bZ8"/>
+                            <constraint firstItem="ay3-lN-TSe" firstAttribute="top" secondItem="czY-j4-WIE" secondAttribute="bottom" constant="-8" id="X2p-5k-c6c"/>
+                            <constraint firstItem="wHR-Yg-gdU" firstAttribute="bottom" secondItem="SIS-1G-bg1" secondAttribute="bottom" constant="56" id="YAZ-7a-dV1"/>
+                            <constraint firstAttribute="centerXWithinMargins" secondItem="wHR-Yg-gdU" secondAttribute="centerXWithinMargins" constant="-71" id="YIB-rf-DXx"/>
+                            <constraint firstItem="OTF-gM-chU" firstAttribute="top" secondItem="bhP-AS-XzQ" secondAttribute="top" constant="24" id="b6F-aD-LIQ"/>
+                            <constraint firstItem="FMz-1j-LBK" firstAttribute="top" secondItem="wHR-Yg-gdU" secondAttribute="top" constant="64" id="bG8-eC-W0L"/>
+                            <constraint firstItem="czY-j4-WIE" firstAttribute="centerX" secondItem="ay3-lN-TSe" secondAttribute="centerX" constant="-9" id="dgi-5Q-6pA"/>
+                            <constraint firstItem="bhP-AS-XzQ" firstAttribute="leading" secondItem="JmK-Bu-8r1" secondAttribute="leading" id="doJ-yF-udW"/>
+                            <constraint firstItem="OTF-gM-chU" firstAttribute="top" secondItem="ay3-lN-TSe" secondAttribute="bottom" id="h8k-Ya-uay"/>
+                            <constraint firstAttribute="centerX" secondItem="7fq-1r-Vct" secondAttribute="centerX" id="jHA-Qw-Fbf"/>
+                            <constraint firstItem="SIS-1G-bg1" firstAttribute="leading" secondItem="JmK-Bu-8r1" secondAttribute="leading" constant="40" id="jWX-A5-OSR"/>
+                            <constraint firstItem="wHR-Yg-gdU" firstAttribute="leading" secondItem="cAd-NY-cwO" secondAttribute="leading" constant="8" id="lg6-o4-6GK"/>
+                            <constraint firstItem="FMz-1j-LBK" firstAttribute="leading" secondItem="wHR-Yg-gdU" secondAttribute="leading" constant="31" id="sQU-xY-TWJ"/>
+                            <constraint firstItem="Ydu-ga-8Jd" firstAttribute="top" relation="greaterThanOrEqual" secondItem="cAd-NY-cwO" secondAttribute="bottom" constant="60" id="tRg-lX-DFe"/>
+                        </constraints>
+                    </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <connections>
+                        <outletCollection property="cloudViews" destination="WoJ-OM-zoN" collectionClass="NSMutableArray" id="f7j-u6-IQR"/>
+                        <outletCollection property="cloudViews" destination="SIS-1G-bg1" collectionClass="NSMutableArray" id="Fxy-zH-NFS"/>
+                        <outletCollection property="cloudViews" destination="FMz-1j-LBK" collectionClass="NSMutableArray" id="Vrf-Oy-0XO"/>
+                        <outletCollection property="cloudViews" destination="cAd-NY-cwO" collectionClass="NSMutableArray" id="rbX-ef-VM1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wmu-7w-vJD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1048" y="3200"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Ketch" width="39" height="42"/>
+        <image name="crab" width="96" height="60"/>
+        <image name="crab-sorry-arrow" width="10" height="24"/>
         <image name="game-bucket-keep" width="128" height="144"/>
         <image name="game-bucket-marry" width="128" height="148"/>
         <image name="game-bucket-skip" width="128" height="144"/>
         <image name="profile-about-me-divider" width="572" height="11"/>
+        <image name="sprite-cloud-1" width="80" height="34"/>
+        <image name="sprite-cloud-2" width="95" height="43"/>
+        <image name="sprite-cloud-3" width="66" height="34"/>
+        <image name="sprite-cloud-4" width="95" height="44"/>
+        <image name="sprite-sun" width="218" height="186"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="nCf-mq-8Rt"/>
